# airflow-submodule

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yaml  main.py  menu-compose.yaml  menu-test.py  minio-compose.yaml  minio-test.py  pyproject.toml  requirements.txt  start-airflow.sh
.github/workflows/: deploy.yml
airflow/config/: airflow.cfg
data/postgresql/config/: create-table.sql  create_tables.sql  products_seed.sql  seed.sql  users_seed.sql
engine/common/: utils.py
engine/dynamic_import/: main.py
engine/menu/: main.py
engine/monitoring_factory/: monitoring_factory.py
engine/monitoring_run_options/: etl_only.py
engine/utils/: utils.py
installation-scripts/: airflow-docker.sh  airflow-library.sh  airflow.md  run-local.sh
monitorings/: __init__.py
monitorings/hello/etl/: entrypoint.py
monitorings/hello/model/: mode.py
monitorings/teste/: Dockerfile  config.json
monitorings/teste/etl/: entrypoint.py
monitorings/teste/model/: model.py
src/: math_operations.py
src/dags/: dagzera.py  my_dag.py  my_test.py
templates/: cookiecutter.json  create_monitoring.sh
templates/{{cookiecutter.monitoring_name}}/: config.json
templates/{{cookiecutter.monitoring_name}}/etl/: entrypoint.py
templates/{{cookiecutter.monitoring_name}}/model/: model.py
