[tool.poetry]
name = "airflow-submodule"
version = "0.1.0"
description = ""
authors = ["Maycon Carlete <maycon.carlete@gmail.com>"]
readme = "README.md"
packages = [{include = "airflow_submodule"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
