[tool.poetry]
name = "airflow-submodule"
version = "0.1.0"
description = ""
authors = ["Maycon Carlete <maycon.carlete@gmail.com>"]
readme = "README.md"
packages = [{include = "airflow_submodule"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.5.1"
cookiecutter = "^2.1.1"
pandas = "^1.5.3"
pyathena = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
